--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ESNext"
+    "module": "ESNext",
+    "lib": ["es2015", "dom"]
   },
   "ts-node": {
     "compilerOptions": {
