--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "target": "es2015"
   },
   "ts-node": {
     "compilerOptions": {
