--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "module": "ESNext",
     "lib": ["es2015", "dom"],
-    "target": "es2015"
+    "target": "es2015",
+    "moduleResolution":"node"
   },
   "ts-node": {
     "compilerOptions": {
