--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "ESNext",
     "lib": ["es2015", "dom"],
     "target": "es2015",
-    "moduleResolution":"node"
+    "moduleResolution":"node",
+    "types": ["node"]
   },
   "ts-node": {
     "compilerOptions": {
